Fixed overlap bug / cleanup css

--- a/src/components/Analysis/Review.css
+++ b/src/components/Analysis/Review.css
@@ -62,7 +62,8 @@
 }
 
 /* hide add groups for children */
-#query-builder .rules-group-container:nth-child(n+2)
+#query-builder
+  .rules-group-container:nth-child(n + 2)
   > div.rules-group-header
   > div.btn-group.pull-right.group-actions
   > button:nth-child(2) {
@@ -74,12 +75,11 @@
 }
 
 #query-builder .rules-group-header .group-conditions .btn.readonly:not(.active),
-#query-builder .rules-group-header .group-conditions input[name$="_cond"] {
+#query-builder .rules-group-header .group-conditions input[name$='_cond'] {
   border: 0;
   clip: rect(0 0 0 0);
   height: 1px;
   margin: -1px;
-  overflow: hidden;
   padding: 0;
   position: absolute;
   width: 1px;
@@ -110,8 +110,8 @@
   display: block;
 }
 
-#query-builder .rule-value-container input[type="text"],
-#query-builder .rule-value-container input[type="number"],
+#query-builder .rule-value-container input[type='text'],
+#query-builder .rule-value-container input[type='number'],
 #query-builder .rule-value-container select {
   padding: 1px;
 }
@@ -139,7 +139,7 @@
 
 #query-builder .rules-list > ::after,
 #query-builder .rules-list > ::before {
-  content: "";
+  content: '';
   position: absolute;
   left: -10px;
   width: 10px;
@@ -169,10 +169,10 @@
 
 #query-builder.bt-checkbox-glyphicons
   .checkbox
-  input[type="checkbox"]:checked
+  input[type='checkbox']:checked
   + label::after {
-  font-family: "Glyphicons Halflings";
-  content: "\e013";
+  font-family: 'Glyphicons Halflings';
+  content: '\e013';
 }
 
 #query-builder.bt-checkbox-glyphicons .checkbox label::after {
@@ -208,7 +208,6 @@
 #query-builder .dragging {
   position: fixed;
   opacity: 0.5;
-  z-index: 100;
 }
 
 #query-builder .rule-placeholder {
